--- a/assets/lib/css/newton.css
+++ b/assets/lib/css/newton.css
@@ -1,3 +1,9 @@
+body, html {
+  scroll-behavior: smooth;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
 .section-header {
   background-color: #ffffff;
   min-height: 100px;
